# PKermut

./: .gitignore  Dockerfile  README.md  pyproject.toml
kermut/: README.md  pyproject.toml
kermut/src/kermut/cmdline/preprocess_data/: extract_esm2_embeddings.py  extract_esm2_zero_shots.py
kermut/src/kermut/data/: _prepare_GP_inputs.py  _prepare_GP_kwargs.py
kermut/src/kermut/gp/: _gp.py  _instantiate_gp.py  _optimize_gp.py  _predict.py
pg_model/: pyproject.toml
pg_model/src/pg_model/: __main__.py  constants.py  estimator.py  kermut_run.py  pair_sampling.py  utils.py
pg_model/src/pg_model/hydra_configs/: benchmark.yaml
pg_model/src/pg_model/hydra_configs/data/: dataset.yaml  paths.yaml
pg_model/src/pg_model/scripts/: conditionals.py  coords.py  embeddings.py  precompute_artifacts.py  process_conditionals.py  zero_shot.py
tests/: conftest.py  test_local_training_job.py  test_main.py
tests/data/conditional_probs/: RASK_HUMAN_Weng_2022_binding-DARPin_K55.npy
tests/data/conditional_probs/ProteinMPNN/: TCRG1_MOUSE_Tsuboyama_2023_1E0L.npy
tests/data/conditional_probs/raw_ProteinMPNN_outputs/TCRG1_MOUSE_Tsuboyama_2023_1E0L/proteinmpnn/conditional_probs_only/: TCRG1_MOUSE.npz
tests/data/datasets/: RASK_HUMAN_Weng_2022_binding-DARPin_K55.csv  TCRG1_MOUSE_Tsuboyama_2023_1E0L.csv
tests/data/embeddings/: TCRG1_MOUSE_Tsuboyama_2023_1E0L.h5
tests/data/structures/coords/: RASK_HUMAN_Weng_2022_binding-DARPin_K55.npy  TCRG1_MOUSE.npy
tests/data/zero_shot_fitness_predictions/ESM2/650M/: TCRG1_MOUSE_Tsuboyama_2023_1E0L.csv
