[project]
name = "kermut"
version = "1.0.0"
description = "Kermut"
authors = [{name = "Peter Mørch Groth", email = "petermoerchgroth@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "botorch>=0.16.1",
    "fair-esm>=2.0.0",
    "gpytorch>=1.14.2",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "numpy>=1.24.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scipy>=1.15.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
indent-width = 4
line-length = 100
target-version = "py312"
exclude = [
    ".eggs",
    ".git",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
use_parentheses = true
force_grid_wrap = 0
include_trailing_comma = true
ensure_newline_before_comments = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
